--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,18 +6,16 @@
 @layer base {
 
 	html {
-		@apply bg-gray-900;
 		@apply text-white;
-		@apply font-roboto;
+		@apply font-opensans;
+		background: #000 url('/img/bg-800.jpg') top center no-repeat;
+		background-size: cover;
+		background-attachment: fixed;
 	}
 
 	body {
-		@apply text-xl;
+		@apply text-lg;
 		min-width: 375px;
-	}
-
-	main {
-		@apply min-h-screen;
 	}
 
 	p {
@@ -30,5 +28,11 @@
 		fill: currentColor;
 		stroke: currentColor;
 		stroke-width: 0;
+	}
+
+	@screen md {
+		html {
+			background-image: url('/img/bg.jpg');
+		}
 	}
 }
